--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -30,7 +30,7 @@ License: CC BY-NC-SA 4.0
 @import "module/common";
 @import "module/content";
 @import "module/comment";
-@import "page/share";
+//@import "page/share";
 @import "page/music";
 @import "page/bookmark";
 @import "style";
