--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/content.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/content.less
@@ -600,6 +600,17 @@
       text-decoration: underline;
     }
   }
+  a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
   ul, ol {
     padding: 40px 50px 30px;
     font-size: @f-normal-size;
